# rag-doc-qa

./: .gitignore  README.md  config.py  data_loader.py  docker-compose.yml  main.py  model.py  pyproject.toml  streamlit_app.py  test.py  vector_db.py
app/: document_ingestion.py  main.py  model.py
app/db/: pool.py
app/db/init/: 01-init.sql
db/: pool.py  vector_store.py
db/init/: 01-init.sql
